test/cases/compile_errors/stage1/obj/inferring_error_set_of_function_pointer.zig
comptime {
    const z: ?fn()!void = null;
}

// error
// backend=stage1
// target=native
//
// tmp.zig:2:19: error: function prototype may not have inferred error set
